test/error/iocheck/err2.rzy
// Error: response is not allowed to write state

Err2 = Component
  what : response():R{0,100};

elementary
  a : R{0,100} = 0;
  
  what : response():R{0,100}
    a := 42;
    return 0;
  end
end

